--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Portugal -- Description and travel'
 - !lcsh 'Italy -- Description and travel'
 - !lcc 'DP'
+- GITenberg
 title: Italy; with sketches of Spain and Portugal
 url: http://www.gutenberg.org/ebooks/41150
